*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/task-team-cmdlineclient.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/task-team-cmdlineclient.htm
@@ -11,19 +11,16 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Running the CVS command-line client outside of Eclipse</H1>
 <h3>Compatibility</h3>
-<p> Eclipse implements it's own CVS client in Java that talks directly to the 
-  server using the documented CVS protocol. No external CVS client is required. 
-  However, the CVS Eclipse client stores it's metadata in a format that is compatible 
-  with the command-line client. The metadata is stored in CVS/ subdirectories 
-  but you rarely see these CVS/ folders within Eclipse. They are marked as private 
-  which causes them to be hidden from view. If you open a (non-Eclipse) file explorer 
-  you will see that these directories and their contents appear on the file system.</p>
-<p> Since the Eclipse CVS plugin stores its meta information in a format that 
+<p>Because the Eclipse CVS plugin stores its meta information in a format that 
   is compatible with the command-line CVS client you should be able to use a CVS 
-  command line client against Eclipse workspace files on disk.</p>
+  command line client against Eclipse workspace files on disk. The metadata is 
+  stored in CVS/ subdirectories but you rarely see them within Eclipse. They are 
+  marked as private which causes them to be hidden from view. If you open a (non-Eclipse) 
+  file explorer you will see that these directories and their contents appear 
+  on the file system.</p>
+<h3> Don't forget to refresh!</h3>
 
 
-<h3>Don't forget to refresh!</h3>
 <p>Whenever you use external tools to modify workspace files, you must perform 
   a <strong>Refresh</strong> from within Eclipse to make the workspace aware of 
   the changes. If you get a <em>resource out of sync</em> error in Eclipse it 
@@ -46,7 +43,7 @@
   incorrect contents, although it will not cause any lost work. </p>
 <p><strong>2. CVS directories appear in the workbench</strong></p>
 <p>When you use the command-line CVS the CVS folders can sometimes appear in the 
-  Navigator View? There are some cases where CVS folders are not hidden from the 
+  Navigator View. There are some cases where CVS folders are not hidden from the 
   UI as the user would expect. For instance, CVS folders will appear if a user 
   imports a CVS project into Eclipse before the CVS plug-in is loaded. To avoid 
   this, open the CVS Repositories view (thus loading the CVS plug-in) before importing 
@@ -65,9 +62,9 @@
     open the CVS properties page. This is the project that you wanted to run external 
     CVS commands on.</li>
   <li>Select the <strong>Change Sharing...</strong> button and select the new 
-    location that uses either the 'ext' or 'pserver'.</li>
-  <li>Next, you can run command line operations and then return to Eclipse. Don't 
-    forget to refresh!</li>
+    location that uses either the <em>ext</em> or <em>pserver</em>.</li>
+  <li>Next, you can run command line CVS operations and then return to Eclipse. 
+    <em>Don't forget to refresh</em>!</li>
 </ol>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-95.htm">Changing the properties of a CVS repository location</a><br>
