Added info on how to upgrade 3rd party plugins

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-2.htm
@@ -25,7 +25,7 @@ upgrading.  After you've upgraded your workspace, you won't be able to use it
 again with an older version of Eclipse.  If you ever want to go &quot;back in time&quot;
 to an earlier release, you'll need that backup!
 </p>
-<h3>Users who don't use &quot;-data&quot;</h3>
+<h2>Users who don't use &quot;-data&quot;</h2>
 <p>
 If you weren't previously using &quot;-data&quot; to specify your workspace, follow
 these steps to upgrade:
@@ -60,8 +60,14 @@ Java VM location: <br>
 Command line to start Eclipse: <br>
 &nbsp;&nbsp;&nbsp;<code>&quot;c:\eclipse2_1 -data c:\data\EclipseWorkspace -vm d:\jre\bin\javaw&quot;</code><br>
 </p>
+<p><i>Tip:</i> It's generally a good idea to explicitly specify which Java VM to
+use when running Eclipse.  This is achieved with the &quot;-vm&quot; command line
+argument as illustrated above.  If you don't use &quot;-vm&quot;, Eclipse will look
+on the O/S path.  When you install other products, they may change your path, resulting
+in a different Java VM being used when you next launch Eclipse.
+</p>
 
-<h3>Users who do use &quot;-data&quot;</h3>
+<h2>Users who do use &quot;-data&quot;</h2>
 <p>
 If you were previously using the &quot;-data&quot; argument to start Eclipse, your 
 upgrade path is much easier:
@@ -73,6 +79,23 @@ point to your old workspace location.</li>
 </ol>
 See the example in the previous section for an illustration.
 </p>
+
+<h2>Adding third party plug-ins</h2>
+<p>
+If you have installed extra plugins in your Eclipse environment, you will need to add
+these new plugins to each new build or version of Eclipse you install.  Before you do
+this, refer to the documentation for those plug-ins to ensure they are compatible
+with the version of Eclipse you are moving to.  There are several ways to add these
+extra plug-ins to your new Eclipse install:
+<ol>
+<li>Copy the directories for each plug-in into the &quot;plugins&quot; directory of your
+new Eclipse version.</li>
+<li>Use an Eclipse update site to re-install those extra plug-ins or features in the
+new version of Eclipse.</li>
+<li>If you are using product extensions, simply copy the &quot;links&quot; directory
+into the new Eclipse version install directory.  For more details on product extensions,
+see the documentation in the Platform Plug-in Developer Guide, under <b>Programmer's
+Guide &gt; Packaging and delivering Eclipse based products &gt; Product extensions</b>.</li>
 
 <p>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
