--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -303,7 +303,7 @@
 			<td valign="top" align="right"><b>Wrap Strings</b></td>
 			<td valign="top" align="left">
            
-      <p>You can have String literals wrapped when you press edit them. For example, 
+      <p>You can have String literals wrapped when you edit them. For example, 
         if you have code like this:</p>
            <pre>String message= &quot;This is some long message.&quot;;</pre>
            <p>position your caret after the &quot;some&quot; word and press Enter. 
