--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources_linked.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources_linked.htm
@@ -27,23 +27,31 @@
     files/folders in a project exist as direct descendents of that single rooted 
     directory tree.</li>
 </ol>
-<p>In the first case, the existing provider may operate without error provided 
-  the input to the operation corresponds to files or folders located within the 
-  project directory in the file system. However, if a linked resource is the target 
-  of an operation, this will not be the case (i.e. the external program will not 
-  find the file or folder on disk because it is located elsewhere in the file 
-  system). In this case the operation would most likely fail due to invalid input 
-  or, worse yet, yield unpredictable results. For the second case, problems may 
-  arise if the provider determines the location of a linked resource using the 
-  API on IResource and expects this to translate to a location in the file system 
-  that is a child of the project directory.</p>
+<p>In the first case, lets assume the user picks a linked resource and tries to perform
+  a provider operation on it.  Since the provider calls a command line client, we can assume that
+  the provider does something equivalent to first calling
+   <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>.getLocation().toOSString(),
+  feeding the resulting file system location as an argument to the command line program.  If the resource in question is
+  a linked resource, this will yield a file/folder outside of the project directory tree.  Not all
+  command line clients may expect and be able to handle this case.
+  In short, if your provider ever gets the file system location of a resource, it will likely require
+  extra work to handle linked resources.  
+</p>
+<p>The second case is quite similar in that there is an implicit assumption that the structure of
+  the project resources is 1:1 with that of the file system files/folders.  In general,
+  a provider could be in trouble if they mix IResource and java.io.File operations. 
+  For example, for links, the parent of 
+  <a href="../reference/api/org/eclipse/core/resources/IFile.html"><b>IFile</b></a>
+  is not the same
+  as the java.io.File's parent and code which assumes these to be the same will fail.
+</p>
 <h4>Backwards Compatibility</h4>
-<p>Because existing repository provider (i.e. pre-linked resources) might have 
-  reasonably assumed that the local file system structure mirrored the project 
-  structure, it was important that the introduction of linked resources did not 
-  inadvertantly break existing providers. Consequently, linked resources can not 
+<p>It was important that the introduction of linked resources did not 
+  inadvertantly break existing providers. Specifically, the concern was for
+  providers that reasonably assumed that the local file system structure mirrored the project 
+  structure.  Consequently, by default linked resources can not 
   be added to projects that are mapped to such a provider. Additionally, projects 
-  that contain linked resources can not be shared with that provider.</p>
+  that contain linked resources can not by default be shared with that provider.</p>
 <h4>Strategies for Handling Linked Resources</h4>
 <p>In order to be &quot;link friendly&quot;, a provider should allow projects 
   with linked resources to be version controlled, but can disallow the version 
