*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api.htm
@@ -27,6 +27,8 @@
     and API. You should always list this plug-in as a prerequisite.</li>
   <li><b>org.eclipse.jdt.ui</b> is the plug-in that defines the Java UI API. You 
     should list this plug-in as a prerequisite if you are using the JDT UI classes.</li>
+  <li><b>org.eclipse.jdt.junit</b> is the plug-in that defines the JUnit integration API. You 
+    should list this plug-in as a prerequisite if you are using the JUnit integration classes.</li>
   <li><b>org.eclipse.jdt.launching</b> is the plug-in that defines the Java launching 
     and runtime support. You should list this plug-in as a prerequisite if you 
     need to launch Java virtual machines programmatically.</li>
