--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_wizards.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_wizards.htm
@@ -88,6 +88,10 @@ classes.</p>
         IJavaElement jelem= getInitialJavaElement(selection);
         initContainerPage(jelem);
         initTypePage(jelem);
+        doStatusUpdate();
+    }
+
+    private void doStatusUpdate() {
         // define the components for which a status is desired
         IStatus[] status= new IStatus[] {
             fContainerStatus,
@@ -97,6 +101,13 @@ classes.</p>
         updateStatus(status);
     }
 
+
+    protected void handleFieldChanged(String fieldName) {
+        super.handleFieldChanged(fieldName);
+
+        doStatusUpdate();
+    }
+	
     public void createControl(Composite parent) {
         initializeDialogUnits(parent);
         Composite composite= new Composite(parent, SWT.NONE);
