--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -36,7 +36,7 @@ packages include:</p>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/package-summary.html"> 
     org.eclipse.jdt.ui.text</a> </b> - provides support classes for presenting 
     Java text.&nbsp; </li>
-  <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/package-summary.html">org.eclipse.jdt.ui.text.java</a></b></li>
+  <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/package-summary.html">org.eclipse.jdt.ui.text.java</a></b> - provides interfaces to implement code completion processors.</li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/package-summary.html"> 
     org.eclipse.jdt.ui.text.java.hover</a> </b> - provides implementations for 
     presenting text hovers in Java editors.&nbsp; </li>
