--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -93,7 +93,7 @@ To make things easier, all key customization is done on the Keys preference page
 <p>
 Select <b>Window &gt; Preferences &gt; Workbench &gt; Keys</b> for the Keys preference page.
 </p>
-<p> <img src="../../images/keys1.gif" alt="Keys preference page, showing <em>Emacs</em> as the active configuration, and the <code>Close</code> command selected" width="591" height="543"> 
+<p> <img src="../../images/keys1.gif" alt="Keys preference page, showing 'Emacs' as the active configuration, and the 'Close' command selected" width="591" height="543"> 
 </p>
 In this example, we have chosen to select <em>Emacs</em> as the active configuration, and have selected the command <code>Close</code> from the list of commands. Information on this command, along with its current key bindings, is shown on the right side.
 </p>
@@ -107,7 +107,7 @@ Below the list of key sequences assigned to <code>Close</code>, there is a place
 We type in the key sequence <code>Ctrl+W</code>, and the 'Add' button becomes enabled. Also, a list of all the commands to which the key sequence
 <code>Ctrl+W</code> is already assigned is show below the Add button. We can see that <code>Ctrl+W</code> is currently assigned to the command <code>Cut</code> in the <em>Global</em> scope and <em>Emacs</em> configuration. We click the 'Add' button to assign <code>Ctrl+W</code> to <code>Close</code>.
 </p>
-<img src="../../images/keys2.gif" alt="Keys preference page, assigning the key sequence <code>Ctrl+W</code> to the command <code>Close'" width="470" height="247"> </p> 
+<img src="../../images/keys2.gif" alt="Keys preference page, assigning the key sequence 'Ctrl+W' to the command 'Close'" width="470" height="247"> </p> 
 Now we see <code>Ctrl+W</code> added to the list of key sequences assigned to 
 <code>Close</code>. Notice the small 'change' graphic <img src="../../images/change.gif" alt="Small graphic representing 'change'"> 
 indicating that this key binding changes an existing key binding. Our new key 
@@ -118,13 +118,13 @@ to <code>Cut</code> will automatically be restored.
 <p> <img src="../../images/keys3.gif" alt="Keys preference page, showing the new assignment, including 'change' graphic" width="472" height="428"> 
 </p>
 By selecting the command <code>Cut</code>, we can see the results of our change. Notice the small 'minus' graphic <img src="../../images/minus.gif" alt="Small graphic representing 'minus'"> indicating that the key binding was removed. We can restore this key binding at any time by selecting it here and clicking the 'Restore' button, effectively removing the new key binding we added in the previous step.
-<p> <img src="../../images/keys4.gif" alt="Keys preference page, showing the <code>Cut</code> command" width="604" height="517"> 
+<p> <img src="../../images/keys4.gif" alt="Keys preference page, showing the 'Cut' command" width="604" height="517"> 
 </p>
 Perhaps we choose to assign another key to <code>Cut</code> in the <em>Emacs</em> 
 configuration, say <code>Ctrl+Alt+W</code>. Adding this in the previous manner 
 above produces the following. Notice the small 'plus' graphic <img src="../../images/plus.gif" alt="Small graphic representing 'plus'"> 
 indicating that the key binding was added by the user, and was previously unassigned: 
-<p> <img src="../../images/keys5.gif" alt="Keys preference page, adding the key sequence <code>Ctrl+Alt+W</code> to <code>Close</code>" width="574" height="450"></p>
+<p> <img src="../../images/keys5.gif" alt="Keys preference page, adding the key sequence 'Ctrl+Alt+W' to 'Close'" width="574" height="450"></p>
 <h2>The Dynamic Nature of Key bindings</h2>
 <p>
 Key bindings are provided by plugins, and in Eclipse, plugins can be added or removed. This can cause key bindings declared by these plugins to be added or removed. Eclipse stores custom key bindings in a way to automatically compensate for this. Consider the example above where <code>Ctrl+Alt+W</code> was assigned to <code>Cut</code> in the <em>Emacs</em> configuration. Consider the user installs a new plugin which assigns <code>Ctrl+Alt+W</code> to a particular command. Eclipse will preserve the user's assignment to <code>Cut</code>, but show the key binding with the small 'change' graphic instead of the 'plus' graphic.
@@ -141,7 +141,7 @@ This is a conflict. It wouldn't be proper to invoke both commands, nor would it 
 <p>
 Conflicts of this nature are shown in the Keys preference page as follows. Notice the red text and the word "[conflict]":
 </p>
-<p> <img src="../../images/keys6.gif" alt="Keys preference page, showing a conflict for the key sequence <code>Ctrl+F4'" width="567" height="451"> 
+<p> <img src="../../images/keys6.gif" alt="Keys preference page, showing a conflict for the key sequence 'Ctrl+F4'" width="567" height="451"> 
 </p>
 <p>
 These types of conflicts can be resolved by the user explicitly assigning the key sequence to one of the commands.
