Fixed images appearing on same line as text

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
@@ -20,7 +20,8 @@
     the file's context menu. Note that the default editor for a .xml file is a 
     simple text editor, but this can be changed in the <b>Window &gt; Preferences &gt; Workbench &gt; File 
     Associations</b>. </li>
-  <li>Enter the following content in the editor.<img src="../images/Image600_editor_first_target.gif" alt="HelloWorld file content" border="0" width="487" height="270"></li>
+  <li>Enter the following content in the editor.
+    <p><img src="../images/Image600_editor_first_target.gif" alt="HelloWorld file content" border="0" width="487" height="270"></p></li>
   <li>Notice the syntax coloring for property values.</li>
   <li>Begin to enter a second target by typing '&lt;tar', then hit Ctrl-Space 
     to activate content assist. You are presented with a list of valid completions. 
