--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-84_run_ant.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-84_run_ant.htm
@@ -18,7 +18,8 @@
 <ol>
   <li>Select HelloWorld.xml in the Navigator and choose <b>Run Ant...</b> from its 
     context menu.</li>
-  <li>The Run Ant dialog appears.<img src="../images/Image603_run_dialog.gif" alt="Run Ant dialog" border="0" width="474" height="631"><br>
+  <li>The Run Ant dialog appears.
+    <p><img src="../images/Image603_run_dialog.gif" alt="Run Ant dialog" border="0" width="474" height="631"></p>
   </li>
   <li>This dialog allows you to configure many aspects of the way your Ant buildfile 
     is run, but for now we will concentrate on the <b>Targets</b> tab which allows you 
