*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
@@ -42,6 +42,12 @@ does not already exist remotely.
     exist both locally and remotely.)</li>
 </ol>
 
+<p><h4>Consequences for Linked Resources</h4>
+As mentioned in <a href="../concepts/concepts-13.htm">Linked resources</a>, different
+providers may handle linked resources differently.  For Team CVS, linked resources
+are allowed but ignored.  Specifically, projects which contain linked resources can be shared with CVS,
+but the linked resources themselves cannot be version controlled.
+
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 <a href="../concepts/concepts-27b.htm">Branches</a><br>
