Added readme on how to upgrade workspace

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -11,8 +11,8 @@
 <body>
 
 <h1>Eclipse Project Release Notes</h1>
-<p><b>DRAFT </b>Pre-release 2.1.0<br>
-Last revised March 25, 2003</p>
+<p><b></b>Release 2.1.0<br>
+Last revised March 26, 2003</p>
 <p align="left"><strong>This software is OSI Certified Open Source Software.<br>
 OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</strong></p>
 <blockquote>
@@ -241,8 +241,14 @@ strings, code comments, etc. but the Eclipse SDK itself is not designed to be
 localized for BIDI locales and its widget orientation cannot be changed.</p>
 <p><i>IMPORTANT: The above BIDI support is available only for Windows operating
 environments.</i></p>
+
+
 <h2>2. <a name="Compatibility with Previous Release"></a> Compatibility with
 Previous Releases</h2>
+<p>
+Read <a href="readme_upgrading.html">here</a> for instructions on upgrading your
+Eclipse workspace from a previous release.
+</p>
 <h3>Compatibility of Release 2.1 with 2.0</h3>
 Eclipse SDK 2.1 is intended to be upwards compatible with Eclipse SDK 2.0. We
 have made exceptions only in areas where slavishly maintaining compatibility
@@ -303,6 +309,8 @@ unsupportable and receive no guarantees about compatibility within a single
 release much less with an earlier release. Refer to <i><a href="http://www.eclipse.org/articles/Article-API%20use/eclipse-api-usage-rules.html">How
 to Use the Eclipse API</a></i> for information about how to write compliant
 plug-ins.</p>
+
+
 <h3>2.1 Incompatibilities between release 2.1 and 2.0</h3>
 <p>Eclipse 2.1 breaks compatibility with Eclipse 2.0 in the following areas.</p>
 <p>Note: Bug numbers refer to the Eclipse project bug database at <a href="http://dev.eclipse.org/bugs/">http://dev.eclipse.org/bugs/</a></p>
